# TypeSystemImplementation

./: .gitignore  CMakeLists.txt  Internship.cbp  Internship.mk  Internship.project  Internship.txt  Internship.workspace  Makefile  main.cpp
include/: ComponentFunction.h  Environment.cpp  Environment.h  Function.h  Rule.h  RuleAssign.h  RuleBinOp.h  RuleCallCmpF.h  RuleCallF.h  RuleConst.h  RuleExprAsStmt.h  RuleExprConcat.h  RuleFuncDef.h  RuleIf.h  RuleInput.h  RuleRepeat.h  RuleSkip.h  RuleStmtConcat.h  RuleVar.h  RuleWhile.h  StateTuple.h  TimeDependentEC.h  Value.h  ValueInt.h  ValueString.h  libtypesystem.h  parse.h
lib/: exception.cpp  extension.h  iterators.h  lib-common.h  memory.cpp  memorypool.cpp  memorypool.debug.cpp  memorypool.debug.h  parser.cpp  parser.test.cpp  queue.cpp  shared_object.cpp  simplestring.cpp  simplestring.h  simplestring.test.cpp  stack.cpp  stack.h  stringparse.h  type_hash.cpp  type_hash.h  update.sh
parser/: CMakeLists.txt  main.cpp  parse.cpp  parse.h  parse.test.cpp  test.eca
parser/ext/gtest/: CMakeLists.txt
parser/lib/: deque.h  exception.h  iterators.cpp  memory.h  memorypool.cpp  memorypool.h  parser.h  queue.h  shared_object.h  simplestring.test.cpp  stringparse.cpp  stringparse.test.cpp  zip.h
src/: ComponentFunction.cpp  Environment.cpp  Environment.test.cpp  Function.cpp  Rule.cpp  Rule.test.cpp  RuleAssign.cpp  RuleAssign.test.cpp  RuleBinOp.cpp  RuleBinop.test.cpp  RuleCallCmpF.cpp  RuleCallCmpF.test.cpp  RuleCallF.cpp  RuleCallF.test.cpp  RuleConst.cpp  RuleExprAsStmt.cpp  RuleExprConcat.cpp  RuleExprConcat.test.cpp  RuleFuncDef.cpp  RuleFuncDef.test.cpp  RuleIf.cpp  RuleIf.test.cpp  RuleInput.cpp  RuleRepeat.cpp  RuleRepeat.test.cpp  RuleSkip.cpp  RuleStmtConcat.cpp  RuleVar.cpp  RuleWhile.cpp  RuleWhile.test.cpp  StateTuple.cpp  StateTuple.test.cpp  TimeDependentEC.cpp  Value.cpp  ValueInt.cpp  ValueString.cpp  parse.cpp  parse.test.cpp
test-files/: 1.eca  2.eca  3.eca  soundsystem.eca  soundsystem1.eca  soundsystem2.eca  soundsystemprogram.eca  soundsystemprogram1.eca  soundsystemprogram2.eca  testcomp.eca  testcompprogram.eca  testfuncdef.eca  testrecursion.eca  teststuff.eca  testwhile.eca
